# ATP

./: .gitignore  .replit  README.md  api.py  app.py  app_old.py  builtin_assistant_dataset.py  builtin_pretrain_dataset.py  builtin_sft_dataset.py  chatbot_model.py  chatbot_tokenizer.py  cot_reasoning_dataset.py  english_vocab_padding.py  gguf_writer.py  index.html  model_library.py  plugin_manager.py  pyproject.toml  reasoning.py  reasoning_handler.py  replit.md  sample_chatbot_data.json  start.sh  test_api.py  transformer_model.py  utils.py  vnexai.py
VnexAIModel/VnexAIModel/: README.md  app.py  data_preprocessor.py  parse_code_debug_data.py  pyproject.toml  utils.py
attached_assets/: Pasted--0-12-items-problem-id-string-p03265-language-string-Python-original-status-string-Runt-1760533762906_1760533762907.txt  Pasted-2025-10-16-16-39-22-141-Uncaught-app-execution-Traceback-most-recent-call-last-File-C-Users-1760621976292_1760621976292.txt  Pasted-Transformer-Model-Initialized-GPU-Enabled-CuPy-Vocab-si_1769523119876.txt
data/: common_words_en.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  chatStorage.ts  index.css  styles.ts  theme.ts  types.ts
frontend/src/components/: Badge.tsx  Btn.tsx  Card.tsx  FileUpload.tsx  Logo.tsx  PageShell.tsx  Sidebar.tsx
frontend/src/pages/: ChatPage.tsx  DataPage.tsx  ExportPage.tsx  ModelPage.tsx  (+3 more)
mods/: example_mod.py
plugins/: cot_reasoning.py  example_plugin.py
scripts/: create_mod.py  create_plugin.py  list_extensions.py  run_mods.py
